[gd_scene load_steps=9 format=2]

[ext_resource path="res://Chapter 1/Box/Box.gd" type="Script" id=1]
[ext_resource path="res://Chapter 1/Box/Cardboard004_1K_NormalGL.jpg" type="Texture" id=2]
[ext_resource path="res://Chapter 1/Box/Cardboard004_1K_Roughness.jpg" type="Texture" id=3]
[ext_resource path="res://Chapter 1/Box/Cardboard004_1K_Color.jpg" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=4]
rough = true

[sub_resource type="CubeMesh" id=2]
resource_local_to_scene = true
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 4 )
roughness_texture = ExtResource( 3 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 2 )
depth_enabled = true
depth_scale = 0.931
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false

[sub_resource type="BoxShape" id=1]
resource_local_to_scene = true
extents = Vector3( 0.5, 0.5, 0.5 )

[node name="Box" type="RigidBody"]
physics_material_override = SubResource( 4 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Spot1" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )

[node name="Spot2" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )

[node name="Spot3" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )

[node name="Spot4" type="Spatial" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )

[node name="Spot5" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )

[node name="Spot6" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
